# webscraping-py

./: .gitpod.yml  LICENSE  README.md  pyproject.toml
Baidu Scrape Head URLs/: baidu head urls.py
Bing/: bing_ads.py  bing_local_results.py  bing_news.py  bing_organic_search_results.py  bing_related_questions.py  bing_related_searches.py  bing_video_results.py
Bing Scrape Heading Links/: bing head links.py
Google Scholar/: get_author_citedby_graph.py  get_authors_info_all.py  get_organic_results.py  get_profile_results.py
Naver/: naver_news.py  naver_organic_search.py  naver_related_results.py  naver_video_pagination.py
Scrape Google Autocomplete/: main.py
Scrape Google Cite Displayed Link/: google "cite" displayed link.py  google_cite_displayed_link.py
Scrape Google News Results/: scrape google news.py
Scrape Google Search Rating Votes/: google rating_votes.py
Scrape Google Shopping/: google shopping.py
Scrape TripAdvisor Hotels/: collect_links.py
Scrape eBay Search Results/: main.py
Specific Link Scraper Google Search/: google specific link.py
Yahoo Search Results/: get_ads.py  get_local_results.py  get_organic.py
YouTube/: youtube-organic-search.py  youtube_category_playlists_movie_results.py
bravesearch/: brave_organic_news.py  brave_organic_search_results.py  brave_organic_videos.py
duckduckgo/: duckduckgo_ads.py  duckduckgo_inline_images.py  duckduckgo_inline_videos.py  duckduckgo_knowledge_graph.py  duckduckgo_organic_news.py  duckduckgo_organic_search_results.py  duckduckgo_related_searches.py
(+38 files in other folders)
