[tool.poetry]
name = "webscraping-py"
version = "0.1.0"
description = ""
authors = ["Dmitriy zub <dimitryzub@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
parsel = "^1.6.0"
bs4 = "^0.0.1"
requests = "^2.27.1"
playwright = "^1.22.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
